[package]
name = "Ultra8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.7.0"
ggez-egui = "0.2.1"
#tetra = "0.7"
#raylib = "3.7.0"
pixels-graphics-lib = "0.3.1"
#winit = "0.25"
#winit_input_helper = "0.10"
rand = "0.8.5"
anyhow = "1.0"